UIUX-2186-continue button alignment issue

--- a/src/components/Pages/MultiFactorAuthentication/mfa.css
+++ b/src/components/Pages/MultiFactorAuthentication/mfa.css
@@ -30,3 +30,6 @@
 .mfa_loadingSpinner{
 padding: 10%;
 }
+#continue_button{
+	margin: auto;
+}
